언어 토글 등 업데이트

--- a/_themes/sphinx_rtd_theme_mod/layout.html
+++ b/_themes/sphinx_rtd_theme_mod/layout.html
@@ -155,6 +155,17 @@
                                           titles_only=theme_titles_only|tobool) %}
             {% endif %}
             {% if global_toc %}
+              <ul>
+                 {% if lang_attr == "en" %} <!-- 현재 설정 언어가 영어일 때 한국어 링크 삽입 -->
+					{% set kor_path = (pathto(master_doc) | replace('index.html', '../index.html')) %} <!-- 하위 페이지에서 한국어 페이지로의 링크 -->
+					{% set kor_path = (kor_path | replace('#', '../index.html')) %} <!-- 최상위 페이지에서 한국어 페이지로의 링크 -->
+					<li><a class="lang_sel" href="{{ kor_path }}">한국어로 보기</a></li>
+                 {% else %} <!-- 현재 설정 언어가 한국어일 때 영어 링크 삽입 -->
+					{% set eng_path = (pathto(master_doc) | replace('index.html', 'en/index.html')) %} <!-- 하위 페이지에서 영문 페이지로의 링크 -->
+					{% set eng_path = (eng_path | replace('#', './en/index.html')) %} <!-- 최상위 페이지에서 영문 페이지로의 링크 -->
+					<li><a class="lang_sel" href="{{ eng_path }}">VIEW IN ENGLISH</a></li>
+                 {% endif %}
+              </ul>
               {{ global_toc }}
             {% else %}
               <!-- Local TOC -->
